--- a/college/Advanced CC/interactive_typography/2.1.html
+++ b/college/Advanced CC/interactive_typography/2.1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../../style.css" />
 
     <link
       rel="stylesheet"
@@ -14,33 +14,36 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
   </head>
 
   <body>
     <header>
       <nav>
         <div>
-          <a href="../../index.html"><h1 class="logo">Minjung Cho</h1></a>
+          <a href="../../../index.html"><h1 class="logo">Minjung Cho</h1></a>
         </div>
         <ul class="menu">
           <li>
-            <a href="../../about.html">about</a>
+            <a href="../../../about.html">about</a>
           </li>
           <li>
             <a>work</a>
             <ul class="submenu">
               <li>
-                <a href="../../highschool/highschool.html">highschool</a>
+                <a href="../../../highschool/highschool.html">highschool</a>
                 <!-- <ul class="submenu2">
-                  <li><a href="#">AP </a></li>
-                  <li><a href="#">Emotion</a></li>
-                </ul> -->
+                    <li><a href="#">AP </a></li>
+                    <li><a href="#">Emotion</a></li>
+                    </ul> -->
               </li>
               <li>
-                <a href="../../college/college.html">college</a>
+                <a href="../../../college/college.html">college</a>
                 <ul class="submenu2">
-                  <li><a href="../../college/Year 1.html">Year 1 </a></li>
-                  <li><a href="../../college/Year 2.html">Year 2 </a></li>
+                  <li><a href="../../../college/Year 1.html">Year 1 </a></li>
+                  <li><a href="../../../college/Year 2.html">Year 2 </a></li>
                 </ul>
               </li>
             </ul>
@@ -57,29 +60,15 @@
         </ul>
       </nav>
     </header>
-  </body>
-
-  <body>
     <button>
-      <a href="../Year 2.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="interactive_typography.html"
+        ><i class="fa-solid fa-arrow-left"></i
+      ></a>
     </button>
-    <h1 class="space">Advanced Critical Computation</h1>
-    <div class="wave container">
-      <div class="item">
-        <div class="item">
-          <section id="Assignment 1">
-            <a href="Assignment1.html"><h2>Assignment 1</h2></a>
-          </section>
-        </div>
+    <h1 class="space">2-1</h1>
 
-        <div class="item">
-          <section id="interactive_typography">
-            <a href="interactive_typography/interactive_typography.html"
-              ><h2>Interactive Typography</h2></a
-            >
-          </section>
-        </div>
-      </div>
+    <div id="2.1">
+      <script src="2.1.js"></script>
     </div>
   </body>
 </html>
