--- a/college/Advanced CC/interactive_typography/interactive_typography.html
+++ b/college/Advanced CC/interactive_typography/interactive_typography.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../../style.css" />
 
     <link
       rel="stylesheet"
@@ -14,6 +14,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
   </head>
 
   <body>
@@ -32,9 +35,9 @@
               <li>
                 <a href="../../highschool/highschool.html">highschool</a>
                 <!-- <ul class="submenu2">
-                  <li><a href="#">AP </a></li>
-                  <li><a href="#">Emotion</a></li>
-                </ul> -->
+                    <li><a href="#">AP </a></li>
+                    <li><a href="#">Emotion</a></li>
+                    </ul> -->
               </li>
               <li>
                 <a href="../../college/college.html">college</a>
@@ -61,23 +64,62 @@
 
   <body>
     <button>
-      <a href="../Year 2.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
-    <h1 class="space">Advanced Critical Computation</h1>
-    <div class="wave container">
-      <div class="item">
-        <div class="item">
-          <section id="Assignment 1">
-            <a href="Assignment1.html"><h2>Assignment 1</h2></a>
-          </section>
-        </div>
+    <h1 class = "space">Interactive Typography</h1>
 
-        <div class="item">
-          <section id="interactive_typography">
-            <a href="interactive_typography/interactive_typography.html"
-              ><h2>Interactive Typography</h2></a
-            >
-          </section>
+    <div class = "space">
+      <div>
+        <div>
+          <a href="2.1.html"><h3>2-1</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.2.html"><h3>2-2</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.3.html"><h3>2-3</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.4.html"><h3>2-4</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.5.html"><h3>2-5</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.6.html"><h3>2-6</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.7.html"><h3>2-7</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.8.html"><h3>2-8</h3>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <a href="2.9.html"><h3>2-9</h3>
         </div>
       </div>
     </div>
