--- a/college/Advanced CC/in-class-challenge/challenges.html
+++ b/college/Advanced CC/in-class-challenge/challenges.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../../style.css" />
 
     <link
       rel="stylesheet"
@@ -61,30 +61,20 @@
 
   <body>
     <button>
-      <a href="../Year 2.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
-    <h1 class="space">Advanced Critical Computation</h1>
+    <h1 class="space">In-Class Challenges</h1>
     <div class="wave container">
       <div class="item">
         <div class="item">
-          <section id="Assignment 1">
-            <a href="Assignment1.html"><h2>Assignment 1</h2></a>
+          <section id="interactive_typography_1">
+            <a href="challenges_1.1.html"><h2>Interactive_Typography_1</h2></a>
           </section>
         </div>
 
         <div class="item">
-          <section id="interactive_typography">
-            <a href="interactive_typography/interactive_typography.html"
-              ><h2>Interactive Typography</h2></a
-            >
-          </section>
-        </div>
-
-        <div class="item">
-          <section id="challenges">
-            <a href="in-class-challenge/challenges.html"
-              ><h2>In-Class Challenges</h2></a
-            >
+          <section id="interactive_typography_1">
+            <a href="challenges_1.2.html"><h2>Interactive_Typography_2</h2></a>
           </section>
         </div>
       </div>
