final typography interaction

--- a/college/Advanced CC/interactive_typography/2.final2.html
+++ b/college/Advanced CC/interactive_typography/2.final2.html
@@ -60,86 +60,15 @@
         </ul>
       </nav>
     </header>
-  </body>
-
-  <body>
     <button>
-      <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="interactive_typography.html"
+        ><i class="fa-solid fa-arrow-left"></i
+      ></a>
     </button>
-    <h1 class = "space">Interactive Typography</h1>
+    <h1 class="space">final 2</h1>
 
-    <div class = "space">
-      <div>
-        <div>
-          <a href="2.1.html"><h3>2-1</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.2.html"><h3>2-2</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.3.html"><h3>2-3</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.4.html"><h3>2-4</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.5.html"><h3>2-5</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.6.html"><h3>2-6</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.7.html"><h3>2-7</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.8.html"><h3>2-8</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.9.html"><h3>2-9</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.final1.html"><h3>final 1</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.final2.html"><h3>final 2</h3>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <a href="2.final3.html"><h3>final 3</h3>
-        </div>
-      </div>
+    <div id="2.final2">
+      <script src="2.final2.js"></script>
     </div>
   </body>
 </html>
