--- a/college/Advanced CC/advanced_cc.html
+++ b/college/Advanced CC/advanced_cc.html
@@ -87,6 +87,12 @@
             >
           </section>
         </div>
+
+        <div class="item">
+          <section id="midterm">
+            <a href="midterm/midterm.html"><h2>Midterm</h2></a>
+          </section>
+        </div>
       </div>
     </div>
   </body>
