--- a/college/Advanced CC/in-class-challenge/challenges.html
+++ b/college/Advanced CC/in-class-challenge/challenges.html
@@ -72,11 +72,11 @@
           </section>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
           <section id="interactive_typography_1">
             <a href="challenges_1.2.html"><h2>Interactive_Typography_2</h2></a>
           </section>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
