--- a/college/Advanced CC/midterm/midterm.html
+++ b/college/Advanced CC/midterm/midterm.html
@@ -70,7 +70,7 @@
     <h1 class="space">midterm</h1>
     <div class="space">
       change the color with your left hand, and draw with your right index
-      finger!
+      finger! Clear out the canvas with the spacebar.
     </div>
 
     <div id="midterm">
