--- a/college/Advanced CC/advanced_cc.html
+++ b/college/Advanced CC/advanced_cc.html
@@ -93,6 +93,12 @@
             <a href="midterm/midterm.html"><h2>Midterm</h2></a>
           </section>
         </div>
+
+        <div class="item">
+          <section id="quiz">
+            <a href="communityquiz/"><h2>Community Quiz</h2></a>
+          </section>
+        </div>
       </div>
     </div>
   </body>
