--- a/college/Advanced CC/communityquiz/communityquiz.html
+++ b/college/Advanced CC/communityquiz/communityquiz.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../../style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <title>Portfolio</title>
     <!-- <link rel="stylesheet" href="../../../style.css" /> -->
 
@@ -69,6 +78,7 @@
       <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
     <h1 class="space">Community Quiz</h1>
+    <script src="communityquiz.js"></script>
     <div class="space">
       change the color with your left hand, and draw with your right index
       finger! Clear out the canvas with the spacebar.
