--- a/college/Advanced CC/advanced_cc.html
+++ b/college/Advanced CC/advanced_cc.html
@@ -96,7 +96,9 @@
 
         <div class="item">
           <section id="quiz">
-            <a href="communityquiz/"><h2>Community Quiz</h2></a>
+            <a href="communityquiz/communityquiz.html"
+              ><h2>Community Quiz</h2></a
+            >
           </section>
         </div>
       </div>
