--- a/college/Advanced CC/communityquiz/communityquiz.html
+++ b/college/Advanced CC/communityquiz/communityquiz.html
@@ -1,82 +1,14 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Portfolio</title>
     <link rel="stylesheet" href="../../../style.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
-      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script> -->
   </head>
-
   <body>
-    <header>
-      <nav>
-        <div>
-          <a href="../../../index.html"><h1 class="logo">Minjung Cho</h1></a>
-        </div>
-        <ul class="menu">
-          <li>
-            <a href="../../../about.html">about</a>
-          </li>
-          <li>
-            <a>work</a>
-            <ul class="submenu">
-              <li>
-                <a href="../../../highschool/highschool.html">highschool</a>
-                <!-- <ul class="submenu2">
-                    <li><a href="#">AP </a></li>
-                    <li><a href="#">Emotion</a></li>
-                    </ul> -->
-              </li>
-              <li>
-                <a href="../../../college/college.html">college</a>
-                <ul class="submenu2">
-                  <li><a href="../../../college/Year 1.html">Year 1 </a></li>
-                  <li><a href="../../../college/Year 2.html">Year 2 </a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a>contact</a>
-            <ul class="submenu">
-              <li>
-                <a href="https://www.instagram.com/yeobaek_blank/">Instagram</a>
-              </li>
-              <!-- <li><a href="#">Etc</a></li> -->
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <button>
-      <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
-    </button>
-    <h1 class="space">Community Quiz</h1>
     <script src="communityquiz.js"></script>
-    <div class="space">
-      change the color with your left hand, and draw with your right index
-      finger! Clear out the canvas with the spacebar.
-    </div>
-
-    <!-- <div id="midterm">
-      <script src="midterm.js"></script>
-    </div> -->
+    <button id="cats">Cats</button>
   </body>
 </html>
