--- a/college/Advanced CC/communityquiz/communityquiz.html
+++ b/college/Advanced CC/communityquiz/communityquiz.html
@@ -57,6 +57,14 @@
         </ul>
       </nav>
     </header>
+    <button>
+      <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
+    </button>
+    <h1 class="space">Community Quiz</h1>
+    <div class="space">
+      change the color with your left hand, and draw with your right index
+      finger! Clear out the canvas with the spacebar.
+    </div>
 
     <script src="communityquiz.js"></script>
     <button id="cats">Cats</button>
