--- a/college/Advanced CC/communityquiz/communityquiz.html
+++ b/college/Advanced CC/communityquiz/communityquiz.html
@@ -69,4 +69,8 @@
     <script src="communityquiz.js"></script>
     <button id="cats">Cats</button>
   </body>
+
+  <div id="communityquiz">
+    <script src="communityquiz.js"></script>
+  </div>
 </html>
