--- a/college/Advanced CC/communityquiz/communityquiz.html
+++ b/college/Advanced CC/communityquiz/communityquiz.html
@@ -60,17 +60,10 @@
     <button>
       <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
-    <h1 class="space">Community Quiz</h1>
-    <div class="space">
-      change the color with your left hand, and draw with your right index
-      finger! Clear out the canvas with the spacebar.
-    </div>
+    <h1 class="space">How Human Are You?</h1>
+    <div class="space">Are you sure that you are human? How human are you?</div>
 
-    <script src="communityquiz.js"></script>
-    <button id="cats">Cats</button>
+    <!-- <script src="communityquiz.js"></script> -->
+    <button id="startquiz"><a href="quiz1.html">start</a></button>
   </body>
-
-  <div id="communityquiz">
-    <script src="communityquiz.js"></script>
-  </div>
 </html>
