--- a/college/Advanced CC/communityquiz/quiz2.html
+++ b/college/Advanced CC/communityquiz/quiz2.html
@@ -14,6 +14,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <style>
+      label input[value="0"],
+      label input[value="2.5"] {
+        transform: scale(2.5);
+      }
+    </style>
   </head>
 
   <body>
@@ -248,11 +255,11 @@
         <h2>Your score is: <span id="score"></span></h2>
         <button>
           <h1>
-            <a href="quiz2.html">Retake Quiz! You can do better this time.</a>
+            <a href="quiz3.html">Try Again.</a>
           </h1>
         </button>
       </div>
     </div>
-    <script src="quiz1.js"></script>
+    <script src="quiz2.js"></script>
   </body>
 </html>
