--- a/college/Advanced CC/communityquiz/quiz2.html
+++ b/college/Advanced CC/communityquiz/quiz2.html
@@ -60,7 +60,7 @@
     <div class="space">
       <form id="quiz-form">
         <div id="questions-container">
-          <!-- Assigned scores for each questions -->
+          <!-- Assign scores for each questions -->
           <div class="question">
             <h4>1. Are you human?</h4>
             <label
@@ -251,6 +251,7 @@
         </div>
       </form>
 
+      <!-- display score -->
       <div id="result" style="display: none">
         <h2>Your score is: <span id="score"></span></h2>
         <button>
