--- a/college/Advanced CC/communityquiz/quiz3.html
+++ b/college/Advanced CC/communityquiz/quiz3.html
@@ -63,6 +63,7 @@
     <div class="space">
       <form id="quiz-form">
         <div id="questions-container">
+          <!-- Assign scores for each questions -->
           <div class="question">
             <h4>1. Are you human?</h4>
             <label
@@ -253,12 +254,12 @@
         </div>
       </form>
 
+      <!-- display score -->
       <div id="result" style="display: none">
         <h2>Your score is: <span id="score"></span></h2>
         <button>
           <a href="quiz4.html">Retake Quiz</a>
         </button>
-        <!-- <button><a href="quiz2.html">Retake Quiz</a></button> -->
       </div>
     </div>
     <script src="quiz3.js"></script>
