--- a/college/Advanced CC/communityquiz/quiz4.html
+++ b/college/Advanced CC/communityquiz/quiz4.html
@@ -62,6 +62,7 @@
     </button>
     <div class="space">
       <form id="quiz-form">
+        <!-- Assign scores for each questions -->
         <div id="questions-container">
           <div class="question">
             <h4>1. Are you human?</h4>
@@ -253,10 +254,10 @@
         </div>
       </form>
 
+      <!-- display score -->
       <div id="result" style="display: none">
         <h2>Your score is: <span id="score"></span></h2>
         <h2>Good Job!</h2>
-        <!-- <button><a href="quiz2.html">Retake Quiz</a></button> -->
       </div>
     </div>
     <script src="quiz4.js"></script>
