--- a/college/Advanced CC/API Project/apiproject.html
+++ b/college/Advanced CC/API Project/apiproject.html
@@ -60,8 +60,13 @@
     <button>
       <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
-    <h1 class="space">API Project</h1>
-    <div class="space">Ghibli API</div>
+    <h1 class="space">API Project_Ghibli API</h1>
+    <div class="space">
+      Make Your Own Ghibli Character! Without Ghibli AI filter :D
+    </div>
+    <!-- <h4 class="space" id="title"></h4> -->
+    <button onclick="loadRandomGhibliData()">Get Random Ghibli Info</button>
+    <pre id="output"></pre>
 
     <script src="apiproject.js"></script>
   </body>
