--- a/college/Advanced CC/API Project/apiproject.html
+++ b/college/Advanced CC/API Project/apiproject.html
@@ -65,7 +65,7 @@
       Make Your Own Ghibli Character! Without Ghibli AI filter :D
     </div>
     <!-- <h4 class="space" id="title"></h4> -->
-    <button onclick="loadRandomGhibliData()">Get Random Ghibli Info</button>
+    <button onclick="loadRandomGhibliData()">Generate Character</button>
     <pre id="output"></pre>
 
     <script src="apiproject.js"></script>
