--- a/college/Advanced CC/advanced_cc.html
+++ b/college/Advanced CC/advanced_cc.html
@@ -80,13 +80,13 @@
           </section>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
           <section id="challenges">
             <a href="in-class-challenge/challenges.html"
               ><h2>In-Class Challenges</h2></a
             >
           </section>
-        </div>
+        </div> -->
 
         <div class="item">
           <section id="midterm">
