--- a/college/Advanced CC/API Project/apiproject.html
+++ b/college/Advanced CC/API Project/apiproject.html
@@ -17,7 +17,7 @@
     />
   </head>
 
-  <body>
+  <body class="apiBackground">
     <header>
       <nav>
         <div>
@@ -61,14 +61,10 @@
     <button>
       <a href="../advanced_cc.html"><i class="fa-solid fa-arrow-left"></i></a>
     </button>
-    <h1 class="space">API Project_Ghibli API</h1>
-    <div class="space">
+    <h1 class="apiTitle">API Project_Ghibli API</h1>
+    <div class="apiSubTitle">
       Make Your Own Ghibli Character! Without Ghibli AI filter :D
     </div>
-    <!-- <h4 class="space" id="title"></h4> -->
-    <!-- <button class="apiButton" onclick="loadRandomGhibliData()">
-      Generate Character
-    </button> -->
     <div class="apiButton" onclick="loadRandomGhibliData()">
       Generate Character
     </div>
