--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </style>
       <div class="profile">
         <img
-          src="images/profile.png"
+          src="../images/profile.png"
           alt="profile"
           width="400px"
           height="500px"
